[package]
name = "profile_doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethenv = { path = "../ethenv" }
dideth = { path = "../dideth" }
tokio = { version="1.34.0", features=["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde = "1.0.193"
serde_json = "1.0.108"
