[package]
name = "profile_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ethers = { version="2.0.10", features = ["ws", "abigen"] }
serde = "1.0"
serde_json = "1.0"
serde-wasm-bindgen = "0.6.1"
log = "0.4.20"
wasm-logger = "0.2.0"
yew = { version="0.21.0", features=["csr"] }
wasm-bindgen = "0.2.88"
web-sys = "0.3.65"
tracing = "0.1.40"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.38"
ethenv = { path = "../ethenv" }
dideth = { path = "../dideth" }
tokio = { version="1.34.0", features=["full"] }
tracing-subscriber = "0.3.18"


[dev-dependencies]
wasm-bindgen-test = "0.3.25"

